--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -194,7 +194,7 @@
     <string name="module_item_more">Mai multe</string>
     <string name="module_medias">Media</string>
     <string name="module_more">Mai multe</string>
-    <string name="module_network">Rețea și actualizări</string>
+    <string name="module_network">Rețea</string>
     <string name="module_search">Căutare</string>
     <string name="module_security">Securitate și Mi Cloud</string>
     <string name="module_system">Sistem</string>
@@ -261,6 +261,7 @@
     <string name="time_in_justnow">Chiar acum</string>
     <string name="title_answer_feedback_main">Am găsit răspunsurile!</string>
     <string name="title_bbs_feedback_main">Aflați mai multe despre gama de telefoane Xiaomi</string>
+    <string name="title_customer_service">Serviciu clienți</string>
     <string name="title_frequent_question_feedback_main">Întrebări frecvente</string>
     <string name="title_mi_family">Dispozitive Mi din apropiere</string>
     <string name="title_nonsystem_app">Alte aplicaţii</string>
