--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -182,6 +182,7 @@
     <string name="empty_title_residual">Niciun reziduu</string>
     <string name="empty_title_video">Nu există videoclipuri ce trebuie șterse​</string>
     <string name="engine_cm">Clean Master</string>
+    <string name="engine_init">Inițializare...</string>
     <string name="engine_tm">Tencent</string>
     <string name="file">Fișiere</string>
     <string name="file_not_found">Fișier negăsit</string>
