--- a/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/InCallUI.apk/res/values-ro/strings.xml
@@ -58,10 +58,13 @@
     <string name="can_not_call_oneself">"Nu se poate apela acest număr"</string>
     <string name="can_not_use">"Nu se poate utiliza"</string>
     <string name="cancel">Anulaţi</string>
+    <string name="card_title_answering">Se preia apelul</string>
+    <string name="card_title_answering_fail">"Nu s-a putut prelua apelul; încercați din nou."</string>
     <string name="card_title_call_ended">"Apel încheiat "</string>
     <string name="card_title_conf_call">Teleconferinţă</string>
     <string name="card_title_dialing">Apelare</string>
     <string name="card_title_hanging_up">Se încheie apelul</string>
+    <string name="card_title_hanging_up_fail">"Nu s-a putut încheia apelul; încercați din nou."</string>
     <string name="card_title_hanging_up_restart">"Nu s-a putut încheia apelul. Reporniți telefonul."</string>
     <string name="card_title_hanging_up_weak_signal">Semnal slab al rețelei mobile. Se încheie apelul</string>
     <string name="card_title_in_call">În timpul apelului</string>
@@ -134,10 +137,7 @@
     <string name="do_not_ask">Nu arăta din nou</string>
     <string name="do_not_support_video_calls_by_remote">"Apelurile video nu sunt suportate pe celălalt telefon"</string>
     <string name="emergency_call_dialog_number_for_display">Număr de urgenţă</string>
-    <string name="fraud_call_answer">Răspundeţi</string>
-    <string name="fraud_call_decline">Refuzaţi</string>
-    <string name="fraud_call_waring">Atenţie: Ar trebui să verificaţi întotdeauna identitatea contactului prin telefon sau apel video înainte de a răspunde la orice mesaje care implică informațiile dvs. personale.</string>
-    <string name="inCallLabel">UI apelare</string>
+    <string name="inCallLabel">Interfață apelare</string>
     <string name="incall_call_type_label_sip">Apel prin internet</string>
     <string name="incall_error_supp_service_conference">Teleconferinţa nu se poate efectua.</string>
     <string name="incall_error_supp_service_hangup">Apelul nu poate fi încheiat.</string>
@@ -207,10 +207,6 @@
     <string name="notification_ongoing_call">Apel în curs</string>
     <string name="notification_requesting_video_call">Solicitare apel video</string>
     <string name="ok">OK</string>
-    <string name="online_check_provider_info">Identificat de %s</string>
-    <string name="online_check_provider_name_by_cmb">China Merchants Bank</string>
-    <string name="online_check_warning_info_by_cmb">Verificaţi întotdeauna identitatea persoanei cu care vorbiţi prin telefon sau video înainte de a răspunde la orice mesaje care implică datele personale.</string>
-    <string name="online_check_warning_type_by_cmb">Spam</string>
     <string name="onscreenEndCallText">Încheiaţi</string>
     <string name="onscreen_add_call_text">Adăugaţi un apel</string>
     <string name="onscreen_audio_mode_bluetooth">Bluetooth</string>
