--- a/Romanian/main/Notes.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/strings.xml
@@ -115,6 +115,8 @@
     <string name="pref_title_skip_confirm_for_quick_delete">Ștergere rapidă</string>
     <string name="recover_notes_hint">A apărut o eroare; recuperați notițele accesând i.mi.com</string>
     <string name="redo">Repetaţi</string>
+    <string name="refuse_to_share_as_pic_because_of_content">Această notiță este prea mare pentru a putea fi partajată.</string>
+    <string name="refuse_to_share_as_pic_because_of_loading">Așteptați încărcarea notiței și încercați din nou.</string>
     <string name="rename_folder_dialog_tile">Redenumiți dosarul</string>
     <string name="root_folder_name">Notițe rapide</string>
     <string name="search">Note</string>
