--- a/Romanian/main/Provision.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Provision.apk/res/values-ro/strings.xml
@@ -34,8 +34,8 @@
     <string name="next">Înainte</string>
     <string name="next_fingerprint">Următoarea</string>
     <string name="other_settings">Setări adiţionale</string>
-    <string name="other_settings_auto_update">Actualizați în mod automat</string>
-    <string name="other_settings_auto_update_summary">MIUI va selecta ora cea mai potrivită pentru descărcarea și instalarea actualizărilor.</string>
+    <string name="other_settings_auto_update">Instalați în mod automat</string>
+    <string name="other_settings_auto_update_summary">MIUI va selecta ora cea mai potrivită pentru instalarea actualizărilor.</string>
     <string name="other_settings_location">Locaţie</string>
     <string name="other_settings_location_summary">Permiteți aplicațiilor să vă acceseze locația.</string>
     <string name="other_settings_mifg_online_content">Carusel de imagini de fundal</string>
@@ -63,7 +63,7 @@ Vizualizaţi Politica de confidențialitate a tastaturii selectate</string>
     <string name="terms_of_use">Termeni și condiții</string>
     <string name="terms_of_use_label">"Confidențialitatea datelor dvs. este foarte importantă pentru noi. Vă rugăm să citiți Termenii și condițiile precum și Politica de confidențialitate pentru a înțelege ce informații colectăm, cum le folosim și ce opțiuni sunt disponibile pentru dvs.
     
-Trebuie să acceptați Condiţiile de utilizare și Politica de confidențialitate înainte de a putea utiliza MIUI. Pe durata activării, serviciile Mi, Serviciile Mi de activare SIM, Mi Cloud, Localizarea dispozitivului, modulele Ecranului principal, Serviciul Jocuri,  componentele de sistem MAB și MSA, DirectService și alte componente statistice se vor conecta la internet și vor obține locația dvs."</string>
+Trebuie să acceptați Condiţiile de utilizare și Politica de confidențialitate înainte de a putea utiliza MIUI. Pe durata activării, serviciile Mi, Serviciile Mi de activare SIM, Mi Cloud, Localizarea dispozitivului, modulele Ecranului principal, Serviciul Jocuri,  componentele de sistem MAB și MSA, DirectService, Quick Card și alte componente statistice și ale contului Mi se vor conecta la internet și vor obține locația dvs."</string>
     <string name="title_fingerprint">Adăugați amprenta</string>
     <string name="user_agreement">Termenii serviciului</string>
     <string name="welcome">Bine aţi venit</string>
